# LeafDepot

./: .gitignore  ARCHITECTURE_REFACTOR.md  README.md  config.json  deploy.sh  environment.yml  install.sh  install_pnpm.sh  install_redis.sh  log_wrapper.sh  logrotate.conf  manage.sh  package-lock.json  package.json  setup_systemd.sh
.claude/: settings.local.json
BarCodeIdentification/: EAN-13-ZXing.py  barcode_results.txt
BarcodeDetection/: barcode_detect.py  predict.py
BarcodeDetection/datasets/barcode/: data.yaml
BoxDetect/src/: __init__.py  detect_utils.py  predict.py
BoxDetect/src/detection/: __init__.py  full_layer_verification.py
Intergration/: nginx.conf  start_app.sh  start_nginx.sh
Intergration/app/: app.py  barcode_recognizer.py  gateway.py  start_gateway.sh  yolo_detection.py
Intergration/app/cam_sys/: CMakeLists.txt
Intergration/app/cam_sys/include/HCNetSDK/: DataType.h  DecodeCardSdk.h  HCNetSDK.h
Intergration/app/cam_sys/src/: CameraController.cpp  CameraController.h  ConfigManager.cpp  ConfigManager.h  main.cpp
Intergration/app/rcs_client/: config.json  config_loader.py  lms_client.py  main.py  sim_lms_server.py  start_sim_lms_server.sh
Intergration/output/20251020_223052/: barcode_results.json  box_results.json
Intergration/output/20251020_223144/: barcode_results.json
Intergration/output/20251020_223505/: box_results.json  piles_results.json
Intergration/tasks/: 自定义盘点任务.csv
Intergration/ui/: README.md  index.html  package-lock.json  package.json
Intergration/ui/src/: App.tsx  main.tsx
Intergration/utils/passwd_encryptor/: encrypt_generator.py
archive/TobaccoCaseMultiImageReader/: TobaccoCaseMultiImageReader.py  烟箱信息汇总完整版.xlsx
core/: __init__.py
core/config/: pile_ID_1_3x10.json  pile_ID_2_5x8.json  pile_ID_3_5x6.json  pile_ID_4_4x7+2.json  pile_ID_5_5x5.json
core/detection/: README.md  __init__.py  detect_utils.py  example_usage.py
core/detection/core/: __init__.py  layer_filter.py  scene_prepare.py
core/detection/depth/: __init__.py  calculator.py  depth_calculator.py  depth_processor.py  processor.py
core/detection/examples/: __init__.py  usage_example.py
core/vision/: __init__.py  barcode_recognizer.py  yolo_detector.py
dataset/labels/: classes.txt  img00000.txt  img00001.txt  img00002.txt  img00003.txt  img00004.txt  img00005.txt  img00006.txt  img00007.txt  img00008.txt  img00009.txt  img00010.txt  img00011.txt  img00012.txt  img00013.txt  img00014.txt  img00015.txt  img00016.txt  img00017.txt  img00018.txt  img00019.txt  img00020.txt  img00021.txt  img00022.txt  img00023.txt  img00024.txt  img00025.txt  img00026.txt  img00027.txt  img00028.txt  img00029.txt  img00030.txt  img00031.txt  img00032.txt  img00033.txt  img00034.txt  img00035.txt  img00036.txt  img00037.txt  img00038.txt  (+48 more)
demo/: README.md  image_api_demo.py  start_demo.sh  start_gateway_test.sh  test_detect_api.sh
demo/static/: index.html  test_detect.html
demo_test/: demo.py  detect_barcode.py  detect_boxed.py
docs/: ARCHITECTURE.md  CLEANUP_LOG.md  REFACTOR_SUMMARY.md  STARTUP_GUIDE.md  USER_GUIDE.html  USER_GUIDE.md  运行指南.md
hardware/cam_sys/: 3d_capture.py  CMakeLists.txt  readme.txt  scan_1_capture.py  scan_2_capture.py
hardware/cam_sys/cam_sys/: CMakeLists.txt
hardware/cam_sys/cam_sys/include/HCNetSDK/: plaympeg4.h
hardware/cam_sys/cam_sys/src/: main.cpp
scripts/: README.md  verify.sh
services/: README.md
services/api/: gateway.py
services/utils/: __init__.py
services/vision/: __init__.py  box_count_service.py  test.py
services/worker/: inventory_worker.py
shared/data/: 烟箱信息汇总完整版.xlsx
shared/models/: README.md
shared/tools/: README.md
src/: README.md
systemd/: leafdepot-gateway.service  leafdepot-gateway.timer  leafdepot-lms.service  leafdepot-lms.timer  leafdepot-rcs.service  leafdepot-rcs.timer  leafdepot-web.service  leafdepot-web.timer  leafdepot-worker.service  leafdepot-worker.timer
temp/: depth_calculate.py  depth_processor.py  rotate_img.py
tool/: prepare_images_for_labeling.py
web/: .coze  .env.local.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  main.tsx
(+912 files in other folders)
